[project]
name = "make-infopigula-great-again"
version = "0.1.0"
description = "Web scraper and email notifier for Infopiguła"
authors = ["Your Name <you@example.com>"]
license = { text = "MIT" }
dependencies = [
  "schedule>=1.1.0",
  "yagmail>=0.14.0",
  "python-dotenv>=1.0.0",
  "playwright>=1.34.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
